# haskell-aws-lambda-sam-nix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  cabal.project  flake.nix  haskell-aws-lambda-sam-nix.cabal  samconfig.toml  template.yaml
app/: Main.hs
